clusters/milkyway/apps/psuite/service-discovery.yaml
apiVersion: v1
kind: Service
metadata:
  name: psuite-discovery
  namespace: psuite
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  loadBalancerIP: 116.203.51.197
