clusters/milkyway/apps/psuite/service-sync-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: psuite-sync-tcp
  namespace: psuite
spec:
  ipFamilies:
  - IPv6
