clusters/milkyway/apps/psuite/service-sync-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: psuite-sync-udp
  namespace: psuite
spec:
  ipFamilies:
  - IPv6
