clusters/milkyway/apps/psuite/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: psuite
  namespace: psuite
spec:
  ipFamilies:
  - IPv6
